Fix bugs, add AOS, redesign scrollbar

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -21,6 +21,7 @@ body {
     background-color: $bg_color;
     font-family: $main_font;
     color: $main_color;
+    overflow-x: hidden;
 }
 .container {
     max-width: $container-width + $container-padding + ($aside_width * 2);
@@ -38,6 +39,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: $main_color;
     background-color: $gold;
     font-family: $second_font;
     font-weight: bold;
@@ -69,7 +71,7 @@ body {
 }
 .pageup {
     opacity: 0;
-	width: 50px ;
+	width: 50px;
 	height: 50px;
 	position: fixed;
     text-align: center;
@@ -93,4 +95,38 @@ body {
 		background-color: #3c4b6d;
 		box-shadow: 1px 0 #0e243f;
 	}
+}
+
+
+
+::-webkit-scrollbar-button {
+	background-image: url('');
+	background-repeat: no-repeat;
+	width: 5px;
+	height: 0px
+}
+	
+::-webkit-scrollbar-track {
+	background-color: $bg_color;
+}
+	
+::-webkit-scrollbar-thumb {
+	-webkit-border-radius: 0px;
+	border-radius: 0px;
+	background-color: $gold;
+}
+	
+::-webkit-scrollbar-thumb:hover{
+	background-color: $main_color;
+}
+	
+::-webkit-resizer{
+	background-image:url('');
+	background-repeat:no-repeat;
+	width: 10px;
+	height: 0px
+}
+	
+::-webkit-scrollbar{
+	width: 10px;
 }
