--- a/src/scss/base/_media.scss
+++ b/src/scss/base/_media.scss
@@ -427,7 +427,7 @@
                 margin-bottom: 20px;
             }
             &-right {
-                span {
+                h2 {
                     margin-bottom: 20px;
                 }
             }
