--- a/src/scss/block/_best.scss
+++ b/src/scss/block/_best.scss
@@ -37,7 +37,7 @@
         }
         &-right {
             max-width: 540px;
-            span {
+            h2 {
                 font-family: $main_font;
                 font-weight: bold;
                 font-size: 36px;
